done, revert if  crash

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,5 +32,5 @@
         <activity android:name=".Hypno"
             android:screenOrientation="portrait"/>
     </application>
-
+    <uses-permission android:name="android.permission.VIBRATE"/>
 </manifest>
